setup/Istio/test/demo_istio.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: demo-istio
  labels:
    istio-injection: enabled
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: http-echo
  namespace: demo-istio
  labels:
    app: http-echo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: http-echo
  template:
    metadata:
      labels:
        app: http-echo
    spec:
      containers:
        - name: http-echo
          image: hashicorp/http-echo:0.2.3
          args:
            - "-text=hello from istio demo"
            - "-listen=:5678"
          ports:
            - containerPort: 5678
              name: http
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: http-echo
  namespace: demo-istio
spec:
  selector:
    app: http-echo
  ports:
    - port: 80
      targetPort: 5678
      protocol: TCP
      name: http
  type: ClusterIP
